framec/tests/snapshots/erlang_snapshots__hsm.snap
---
source: framec/tests/erlang_snapshots.rs
expression: "compile_fixture(\"02_hsm\", \"erlang\")"
---
-module(mini_hsm).
-behaviour(gen_statem).
-export([start_link/0, frame_init/1, create/0, wake/1, sleep/1, signal/1]).
-export([callback_mode/0, init/1]).
-export([live/3, awake/3, asleep/3]).
-record(data, {
    awakes = 0,
    sleeps = 0,
    last = 0,
    frame_stack = [],
    frame_current_state = live,
    frame_enter_args = [],
    frame_exit_args = [],
    frame_state_args = [],
    frame_context_stack = [],
    frame_return_val = undefined,
    frame_skip_enter__ = false
}).




start_link() ->
    gen_statem:start_link(?MODULE, [], []).

frame_init(Pid) ->
    gen_statem:call(Pid, {frame_init, []}).

create() ->
    {ok, Pid} = start_link(),
    frame_init(Pid),
    Pid.

wake(Pid) ->
    gen_statem:call(Pid, wake).

sleep(Pid) ->
    gen_statem:call(Pid, sleep).

signal(Pid) ->
    gen_statem:call(Pid, signal).

callback_mode() -> [state_functions, state_enter].

init([]) ->
    {ok, live, #data{frame_skip_enter__ = true}}.

live(enter, _OldState, #data{frame_skip_enter__ = true} = Data) ->
    {keep_state, Data#data{frame_skip_enter__ = false}};
live({call, From}, {frame_init, []}, Data) ->
    Data1 = Data#data{frame_skip_enter__ = false},
    {repeat_state, Data1, [{reply, From, ok}]};
live(enter, _OldState, Data) ->
    {keep_state, Data};
live({call, From}, __Event = wake, Data) ->
    {keep_state, Data, [{reply, From, ok}]};
live({call, From}, __Event = sleep, Data) ->
    {keep_state, Data, [{reply, From, ok}]};
live({call, From}, __Event = signal, Data) ->
    {keep_state, Data, [{reply, From, ok}]};
live(state_timeout, {frame_enter_transition, Target}, Data) ->
    {next_state, Target, Data};
live({call, From}, _Event, Data) ->
    {keep_state, Data, [{reply, From, ok}]};
live(_EventType, _Event, Data) ->
    {keep_state, Data}.

awake(enter, _OldState, #data{frame_skip_enter__ = true} = Data) ->
    {keep_state, Data#data{frame_skip_enter__ = false}};
awake(enter, _OldState, Data) ->
    Data1 = Data#data{awakes = Data#data.awakes + 1},
    {keep_state, Data1};
awake({call, From}, __Event = signal, Data) ->
    Data1 = Data#data{last = 1},
    {Data2, __FwdNext2, __FwdReply2} = frame_unwrap_forward__(live({call, From}, signal, Data1)),
    __ReturnVal_1 = __FwdReply2,
    case __FwdNext2 of
        undefined -> {keep_state, Data2, [{reply, From, __ReturnVal_1}]};
        _ -> {next_state, __FwdNext2, Data2, [{reply, From, __ReturnVal_1}]}
    end
;
awake(state_timeout, {frame_enter_transition, Target}, Data) ->
    {next_state, Target, Data};
awake({call, From}, _Event, Data) ->
    {keep_state, Data, [{reply, From, ok}]};
awake(_EventType, _Event, Data) ->
    {keep_state, Data}.

asleep(enter, _OldState, #data{frame_skip_enter__ = true} = Data) ->
    {keep_state, Data#data{frame_skip_enter__ = false}};
asleep(enter, _OldState, Data) ->
    Data1 = Data#data{sleeps = Data#data.sleeps + 1},
    {keep_state, Data1};
asleep({call, From}, __Event = signal, Data) ->
    Data1 = Data#data{last = 2},
    {Data2, __FwdNext2, __FwdReply2} = frame_unwrap_forward__(live({call, From}, signal, Data1)),
    __ReturnVal_1 = __FwdReply2,
    case __FwdNext2 of
        undefined -> {keep_state, Data2, [{reply, From, __ReturnVal_1}]};
        _ -> {next_state, __FwdNext2, Data2, [{reply, From, __ReturnVal_1}]}
    end
;
asleep({call, From}, __Event = wake, Data) ->
    frame_transition__('awake', Data, [], [], [], From, ok)
;
asleep(state_timeout, {frame_enter_transition, Target}, Data) ->
    {next_state, Target, Data};
asleep({call, From}, _Event, Data) ->
    {keep_state, Data, [{reply, From, ok}]};
asleep(_EventType, _Event, Data) ->
    {keep_state, Data}.

frame_arg_at__(_, []) -> undefined;
frame_arg_at__(N, _) when N < 1 -> undefined;
frame_arg_at__(1, [H | _]) -> H;
frame_arg_at__(N, L) when length(L) >= N -> lists:nth(N, L);
frame_arg_at__(_, _) -> undefined.

frame_data_get__(Key, Map) -> maps:get(Key, Map, undefined).

frame_transition__(TargetState, Data, ExitArgs, EnterArgs, StateArgs, From, ReplyVal) ->
    Data1 = Data#data{frame_exit_args = ExitArgs},
    Data2 = frame_exit_dispatch__(Data1),
    Data3 = Data2#data{frame_enter_args = EnterArgs, frame_state_args = StateArgs, frame_current_state = TargetState},
    {next_state, TargetState, Data3, [{reply, From, ReplyVal}]}.

frame_push_transition__(TargetState, Data, EnterArgs, StateArgs, From, ReplyVal) ->
    OldState = Data#data.frame_current_state,
    Data1 = Data#data{frame_enter_args = EnterArgs, frame_state_args = StateArgs, frame_current_state = TargetState},
    case OldState =:= TargetState of
        true  -> {repeat_state, Data1, [{reply, From, ReplyVal}]};
        false -> {next_state, TargetState, Data1, [{reply, From, ReplyVal}]}
    end.

frame_forward_transition__(TargetState, ForwardEvent, Data, ExitArgs, EnterArgs, StateArgs, From) ->
    Data1 = Data#data{frame_exit_args = ExitArgs},
    Data2 = frame_exit_dispatch__(Data1),
    Data3 = Data2#data{frame_enter_args = EnterArgs, frame_state_args = StateArgs, frame_current_state = TargetState},
    {next_state, TargetState, Data3, [{next_event, {call, From}, ForwardEvent}]}.

frame_unwrap_forward__({keep_state, D, Actions}) -> {D, undefined, frame_extract_reply__(Actions)};
frame_unwrap_forward__({keep_state, D}) -> {D, undefined, ok};
frame_unwrap_forward__({next_state, NS, D, Actions}) -> {D, NS, frame_extract_reply__(Actions)};
frame_unwrap_forward__({next_state, NS, D}) -> {D, NS, ok}.

frame_extract_reply__([{reply, _From, V} | _]) -> V;
frame_extract_reply__([_ | Rest]) -> frame_extract_reply__(Rest);
frame_extract_reply__([]) -> ok.

frame_exit_dispatch__(Data) ->
    case Data#data.frame_current_state of
        _ -> Data
    end.

frame_state_name__(A) when is_atom(A) ->
    case A of
        live -> "Live";
        awake -> "Awake";
        asleep -> "Asleep";
        _ -> atom_to_list(A)
    end.

frame_dispatch__(EventName, Args, Data) ->
    Ctx = #{return_val => undefined, data => #{}},
    Data1 = Data#data{frame_context_stack = [Ctx | Data#data.frame_context_stack]},
    Msg = case Args of
        [] -> EventName;
        _ -> list_to_tuple([EventName | Args])
    end,
    State = Data1#data.frame_current_state,
    FakeFrom = {self(), make_ref()},
    Result = ?MODULE:State({call, FakeFrom}, Msg, Data1),
    case Result of
        {keep_state, Data2, Actions} ->
            RetVal = case [V || {reply, _, V} <- Actions] of
                [V | _] -> V;
                [] -> undefined
            end,
            Data3 = Data2#data{frame_context_stack = tl(Data2#data.frame_context_stack)},
            {Data3, RetVal};
        {keep_state, Data2} ->
            Data3 = Data2#data{frame_context_stack = tl(Data2#data.frame_context_stack)},
            {Data3, undefined};
        {next_state, NewState, Data2, Actions} ->
            RetVal = case [V || {reply, _, V} <- Actions] of
                [V | _] -> V;
                [] -> undefined
            end,
            Data3 = Data2#data{frame_context_stack = tl(Data2#data.frame_context_stack), frame_current_state = NewState},
            {Data3, RetVal};
        {next_state, NewState, Data2} ->
            Data3 = Data2#data{frame_context_stack = tl(Data2#data.frame_context_stack), frame_current_state = NewState},
            {Data3, undefined}
    end.
